Minimum changes to compile with JDK11